--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <p>For World of Warcraft 6.2.0.<strong>20182</strong></p>
     <p>
       <a class="btn" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=journey8989%40gmail%2ecom&amp;lc=CA&amp;item_name=tMorph&amp;currency_code=USD" target="_blank"><span class="fa fa-heart"></span> Donate</a>
-      <a class="btn" href="https://dl.dropboxusercontent.com/u/104991266/tMorph.zip" target="_blank"><span class="fa fa-download"></span> Download</a>
+      <a class="btn" href="https://github.com/starshipx/tMorph/releases/download/v1.0/tMorph.zip" target="_blank"><span class="fa fa-download"></span> Download</a>
     </p>
     <p>
       <a href="https://twitter.com/StarshipWoW" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @StarshipWoW</a>
