--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h1>tMorph</h1>
     <p>For World of Warcraft 6.2.2.<strong>20574</strong></p>
     <p>
-      <a class="btn" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=journey8989%40gmail%2ecom&amp;lc=CA&amp;item_name=tMorph&amp;currency_code=USD" target="_blank"><span class="fa fa-heart"></span> Donate</a>
+      <a class="btn" href="https://streampro.io/tip/starshipx" target="_blank"><span class="fa fa-heart"></span> Donate</a>
       <a class="btn" href="https://github.com/starshipx/tMorph/releases/download/v1.0.0/tMorph.zip" target="_blank"><span class="fa fa-download"></span> Download</a>
     </p>
     <p>
