--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>tMorph2 &mdash; Download</title>
+  <title>tMorph &mdash; Download</title>
   <meta name="description" content="tMorph download page.">
   <meta name="author" content="Starship">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
